--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2019-03-13  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
+	* who-is-on.rkt: arp エントリーが incomplete な時はインサートしない。
+
 	* [0.3.1] Makefile (git remote set-url origin ssh):
 	リモートリポジトリを切り替える ds218j と syno2
 
