--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2019-03-13  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
+	* [0.4.1] update README.md
+
 	* who-is-on-app.rkt: rewrite get /users use with-output-to-string.
 
 	* who-is-on-update.rkt: rename from who-is-on.rkt
