--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2019-03-14  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
+	* who-is-on-app.rkt: 127.0.0.1 しかリッスンしない。
+	;(run #:listen-ip #f #:port 8000)
+	(run #:port 8000)
+
+	* who-is-on-update.rkt: (pad mac) mac アドレス中のゼロを保管する。
+
 	* 0.5.3.2 bugfix
 	/bin/sh には source コマンドがない。bash にはある。
 	fix typo, who-is-in → who-is-on
