--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2019-03-14  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
+	* env/.placeholder: 動作に必要な環境変数を .placeholder に書いておく。
+
 	* who-is-on-app.rkt: 127.0.0.1 しかリッスンしない。
 	;(run #:listen-ip #f #:port 8000)
 	(run #:port 8000)
