--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2019-03-14  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
+	* 0.5.4 update.sh: cron ではなく、コマンド at に 55 \pm 10 で
+		自分自身を呼び出すスクリプト。
+
 	* env/.placeholder: 動作に必要な環境変数を .placeholder に書いておく。
 
 	* who-is-on-app.rkt: 127.0.0.1 しかリッスンしない。
