--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 2019-03-16  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
-	* Makefile (adjust-url, restore-url): production 用に url を書き換える。
+	* 0.5.5
+
+	* Makefile (install)
+
+	* Makefile (production, development): production 用に url を書き換える。
 
 2019-03-14  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
@@ -13,7 +17,7 @@
 	;;(run #:listen-ip #f #:port 8000)
 	(run #:port 8000)
 
-	* who-is-on-update.rkt: (pad mac) mac アドレス中のゼロを保管する。
+	* who-is-on-update.rkt: (pad mac) mac アドレス中のゼロを補完する。
 
 	* 0.5.3.2 bugfix
 	/bin/sh には source コマンドがない。bash にはある。
