--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-03-18  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
+
+	* update README.md
+	* remove useless conf/crontab
+	* who-is-on.service:EnvironmentFile must be /srv/who-is-on/.env
+
 2019-03-17  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
 	* 0.6.1 Makefile (install-systemd): systemd のユーザからのインストール先は
