--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-03-25  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
+
+	* 0.7.1
+	who-is-on-app.rkt: asynchronous update.
+
 2019-03-23  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
 	* 0.7 who-is-on-app.rkt: status? を定義。
