--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-03-28  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
+
+	* Makefile (production): working tree で sed しない。
+	basic auth
+
 2019-03-25  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
 	* 0.7.1
