--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2019-04-03  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
-
+	* 0.9 /list
 	* who-is-on-app.rkt: wifis, dates-all.
+
 2019-03-28  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
 	* 0.8
