--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2019-04-03  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
+	* 0.9.2 hotfix が期待通りに実行できなかった模様。新たに 0.9.2 リリース。
 	* 0.9.1 update Makefile, who-is-on-app.rkt
 	* グローバル変数 *users* の除去
 	* 0.9 /list
