--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,13 @@
 2019-04-03  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
+	* 0.9.3 vm2019 で git pull しても、新しくならない。どうして？
+	make install で VERSION をコピーするようにしよう。
+
 	* 0.9.2 hotfix が期待通りに実行できなかった模様。新たに 0.9.2 リリース。
+
 	* 0.9.1 update Makefile, who-is-on-app.rkt
 	* グローバル変数 *users* の除去
+
 	* 0.9 /list
 	* who-is-on-app.rkt: wifis, dates-all.
 
