--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,10 @@
 2019-04-12  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
 	* 0.14.2
-	* who-is-on-app.rkt: nginx のプロキシーを通すわけで、
+	* who-is-on-app.rkt: (x-real-ip) ninx のプロキシーを通すわけで、
 	アプリに届く client-ip は 127.0.0.1 になってしまう。
 	nginx が付与する x-real-ip ヘッダから元の IP を拾う。
-	* しかし、拾ってみると IPv6 で通信していることがわかった。
+	* しかし、ヘッダを拾ってみると通信が IPv6 していることがわかった。
 	arp6 を考えるのは面倒なので、ネットで探してサーバレベルで IPv6 を
 	ディスエーブルしたところ、なんかおかしい。
 	nginx が IPv6 をリッスンしてるよ！
