--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2019-04-17  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
+	* 0.15.1
+	* in? タイプチェック。
+	* x-real-ip: bytes->string の前にタイプチェック。
+
 	* 0.15
 	* who-is-on-app.rkt: レイアウトを現代風に。
 	redmine と L99 へのリンクをナビに。
