--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-05-20  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
+
+	* 0.17 stay-time
+
 2019-04-17  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
 	* 0.15.4 bugfix
