--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2019-05-31  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
+	* 0.18 start-time
 	* 0.17.5.2
 	* who-is-on-app.rkt: BUGFIX: password 属性を pass で書いていた。
 
